--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -1,1 +1,13 @@
-<p>weather works!</p>
+<!-- input -->
+<div>
+<input type="text">
+<button type="submit">Invia</button>
+</div>
+<!-- meteo -->
+<div>
+  <h1>Nome</h1>
+  <h3>temp</h3>
+  <p>data</p>
+  <p>descrizione</p>
+  <!-- icona img -->
+</div>
