--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -1,14 +1,16 @@
 <!-- input -->
-<div>
-<input type="text" [(ngModel)]='city'>
-<button type="submit" (click)="search(city)">Invia</button>
+<div class="container mt-3">
+<div class="d-flex">
+<input type="text" [(ngModel)]='city' placeholder="Inserisci una città" class="form-control w-25">
+<button type="submit" (click)="search(city)" class="btn btn-outline-primary">Invia</button>
 </div>
 <!-- meteo -->
-<div>
+<div *ngIf="weather">
   <h1>{{weather.name}}</h1>
   <h3>{{weather.main.temp |number: '1.0-0' }} °C</h3>
-  <p>{{weather.timezone}}</p>
-  <!-- modificare data -->
+  <p>{{weather.timezone|date: 'short'}}</p>
+  <!-- correggere data -->
   <p>{{weather.weather[0].description |titlecase}}</p>
-  <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="icona">
+  <img src="http://openweathermap.org/img/wn/{{weather.weather[0].icon}}@2x.png" alt="icona">
+</div>
 </div>
