--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -1,6 +1,11 @@
 <!-- input -->
 <div class="container mt-3">
-<div class="d-flex">
+  <div class="d-flex align-items-center">
+   <h1>Meteo App</h1>
+   <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="">
+  </div>
+
+<div class="d-flex mt-3">
 <input type="text" [(ngModel)]='city' placeholder="Inserisci una città" class="form-control w-25">
 <button type="submit" (click)="search(city)" class="btn btn-outline-primary">Invia</button>
 </div>
