--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -13,7 +13,7 @@
 <div *ngIf="weather">
   <h1>{{weather.name}}</h1>
   <h3>{{weather.main.temp |number: '1.0-0' }} °C</h3>
-  <p>{{weather.timezone|date: 'short'}}</p>
+  <p>{{date |date: 'fullDate'}}</p>
   <!-- correggere data -->
   <p>{{weather.weather[0].description |titlecase}}</p>
   <img src="http://openweathermap.org/img/wn/{{weather.weather[0].icon}}@2x.png" alt="icona">
